Sea ctualizo productocontroller y productorepository